--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+h1, h2, h3, h4, h5 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+}
