Added basic issue page.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,31 @@
-<div class="m-3">
+<div class="p-3">
   <h2 class="mb-4">
-    HortonWorks Interview Assiment
+    Hortonworks Interview Assignment
   </h2>
 
   <app-typeahead (itemSelected)="onSelect($event)"></app-typeahead>
 
   <hr>
 
-  <app-repo-details *ngIf="repo" [repo]="repo"></app-repo-details>
-</div>
+  <!-- <div *ngIf="repo"> -->
+    <h4 *ngIf="repo" class="mb-3">{{repo.full_name}}</h4>
+
+    <ngb-tabset #tabset (tabChange)="onTabChange($event)">
+      <ngb-tab id="details" title="Details">
+        <ng-template ngbTabContent>
+          <div class="p-2">
+            <app-repo-details *ngIf="repo" [repo]="repo"></app-repo-details>
+          </div>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab id="issues" title="Open Issues ({{repo && repo.open_issues_count}})">
+        <ng-template ngbTabContent>
+          <div class="p-2">
+            <app-repo-issues *ngIf="repo" [repo]="repo" [issues]="issues" [issuesLoaded]="issuesLoaded"></app-repo-issues>
+          </div>
+        </ng-template>
+      </ngb-tab>
+    </ngb-tabset>
+  </div>
+
+<!-- </div> -->
